changes to windows makefile

--- a/windows/Makefile
+++ b/windows/Makefile
@@ -7,6 +7,8 @@ WINPKGLIBDIR = $(WINPKGSDIR)/lib
 
 CC = x86_64-w64-mingw32-gcc
 COPTS = -O3 -g0 -Wall -I $(INCLDIR) -I $(WINPKGINCLDIR) -L . -L $(WINPKGLIBDIR)
+AR = x86_64-w64-mingw32-ar
+RANLIB = x86_64-w64-mingw32-ranlib
 
 all: strings.lib test-strings.exe
 
@@ -20,11 +22,11 @@ test-strings.obj: $(SRCDIR)/test-strings.c $(INCLDIR)/libstrings.h
 	$(CC) $(COPTS) -o test-strings.obj -c $(SRCDIR)/test-strings.c
 
 libstrings.a: strings.obj
-	ar rcs lib.a strings.obj
+	$(AR) rcs libstrings.a strings.obj
 
 strings.lib: libstrings.a
-	@cp lib.a strings.lib
-	ranlib strings.lib
+	@cp libstrings.a strings.lib
+	$(RANLIB) strings.lib
 
 clean:
 	@rm -f *.a *.obj *.lib *.exe
